实现城市列表，用户界面，收藏列表

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,9 +1,9 @@
 @import "../style/yo/lib/core/merge-extra";
 @import "../style/yo/lib/core/merge-config";
 @import "../style/yo/lib/core/reset";
-@import "../style/yo/lib/core/classes/animation.scss";
-@import "../style/yo/lib/ani/classes.scss";
-@import "../style/yo/lib/ani/elastic-in-right.scss";
+@import "../style/yo/lib/core/classes/animation";
+@import "../style/yo/lib/ani/classes";
+@import "../style/yo/lib/ani/elastic-in-right";
 
 @font-face{
 	font-family: "yofont";
