--- a/src/styles/scenery.scss
+++ b/src/styles/scenery.scss
@@ -3,11 +3,11 @@
 @import "../style/yo/lib/core/reset";
 
 .mainview{
-   overflow-y: scroll;
+// overflow-y: scroll;
 }
 html,body{
-    width: 100%;
-    height: 100%;
+//  width: 100%;
+//  height: 100%;
     font-size: 0.12rem;
     
 }
